# mlx-lora-finetune

./: .gitignore  README.md  pyproject.toml
data/: test.jsonl  train.jsonl  valid.jsonl
results/: grand-comparison.md
scripts/: evaluate.py  prepare_data.py  train.sh
